--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -103,7 +103,7 @@ en:
     story text 1:                               "The garden of Eden"
     story text 2:                               "The first Christmas"
     story text 3:                               "Joseph, Mary, and the baby Jesus in the manger"
-    story text 4:                               "Angels appear to the sheperds to tell them about the birth of Christ"
+    story text 4:                               "Angels appear to the shepherds to tell them about the birth of Christ"
     story text 5:                               "Jesus heals the paralytic"
     feature 1:                                  "A free Bible experience for your kids"
     feature 2:                                  "Animated storybook app for smartphones and tablets"
